Changes to Shopify Challenge

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <title>Spacetagram</title>
    </head>
    <body>
-      <header>SPACETAGRAM</header>
+      <header id= "headerSpace">SPACETAGRAM</header>
       <h5>Brought to you by NASA's image API</h5>
       <div id="overlay">
          <div id="imageLoadSpinner" class="spinner">
